[gd_scene load_steps=17 format=3 uid="uid://8umpvtgdwv10"]

[ext_resource type="Script" uid="uid://d28wcffekglcy" path="res://main.gd" id="1_jqlde"]
[ext_resource type="Texture2D" uid="uid://pby6arefrpf6" path="res://Sprites/mountain-forest-jungle-trees-cartoon-background-generative-ai.jpg" id="2_7yii4"]
[ext_resource type="Texture2D" uid="uid://brg1r0wve3hem" path="res://Sprites/tree.webp" id="2_08a8y"]
[ext_resource type="Texture2D" uid="uid://dl1oldgwcx8q0" path="res://Sprites/download (1).jpeg" id="3_7yii4"]
[ext_resource type="PackedScene" uid="uid://cdt86t2llv7gc" path="res://Inventory/InventoryWindow.tscn" id="4_4yt8u"]
[ext_resource type="Texture2D" uid="uid://dqwf11prybi5k" path="res://Sprites/3d-fantasy-scene.jpg" id="4_7yii4"]
[ext_resource type="Texture2D" uid="uid://dgxoxtlcshl0h" path="res://Sprites/images.jpeg" id="5_p54wi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8o8l"]
bg_color = Color(0.353438, 0.353438, 0.353438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cor1f"]
bg_color = Color(0.450837, 0.63657, 0.360296, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u77ya"]
bg_color = Color(0.248737, 0.42219, 0.154969, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jf511"]
bg_color = Color(0.658965, 0.606037, 0.576766, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wv8u"]
bg_color = Color(0.41598, 0.41598, 0.41598, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67jta"]
bg_color = Color(0.666568, 0.666569, 0.666568, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8208"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axmix"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqlde"]
bg_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqlde")

[node name="tabs" type="Panel" parent="."]
layout_mode = 2
offset_top = 64.0
offset_right = 192.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q8o8l")

[node name="Woodtab" type="Button" parent="tabs"]
layout_mode = 0
offset_top = 85.0
offset_right = 192.0
offset_bottom = 116.0
text = "Forest"

[node name="Minetab" type="Button" parent="tabs"]
layout_mode = 0
offset_top = 125.0
offset_right = 192.0
offset_bottom = 156.0
text = "Mines"

[node name="Craftingtab" type="Button" parent="tabs"]
layout_mode = 0
offset_top = 165.0
offset_right = 192.0
offset_bottom = 196.0
text = "Crafting"

[node name="InventoryTab" type="Button" parent="tabs"]
layout_mode = 0
offset_top = 44.0
offset_right = 192.0
offset_bottom = 75.0
text = "Inventory"

[node name="MasteryTab" type="Button" parent="tabs"]
visible = false
layout_mode = 0
offset_top = 296.0
offset_right = 192.0
offset_bottom = 327.0
text = "Mastery's"

[node name="ArenaTab" type="Button" parent="tabs"]
layout_mode = 0
offset_top = 208.0
offset_right = 192.0
offset_bottom = 239.0
text = "Arena"

[node name="QuitButton" type="Button" parent="tabs"]
layout_mode = 0
offset_top = 500.0
offset_right = 192.0
offset_bottom = 531.0
text = "Save & Quit"

[node name="WoodTab" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 192.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="WoodTab"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 584.0
texture = ExtResource("2_7yii4")
expand_mode = 1

[node name="wood_panel" type="Panel" parent="WoodTab"]
layout_mode = 1
offset_left = 40.0
offset_top = 40.0
offset_right = 352.0
offset_bottom = 272.0
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_cor1f")

[node name="Panel" type="Panel" parent="WoodTab/wood_panel"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -85.0
offset_right = 150.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u77ya")

[node name="Panel" type="Panel" parent="WoodTab/wood_panel/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -20.0
offset_right = -9.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="TempWoodStorageLabel" type="Label" parent="WoodTab/wood_panel/Panel/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WoodCollectResourceButton" type="Button" parent="WoodTab/wood_panel/Panel"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -37.0
offset_right = 185.0
offset_bottom = -6.0
grow_vertical = 0
text = "Collect Resources "

[node name="Label2" type="Label" parent="WoodTab/wood_panel/Panel"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_left = -1.0
offset_right = 179.0
offset_bottom = 23.0
text = "Temp Storage"
horizontal_alignment = 1

[node name="wood_image" type="TextureRect" parent="WoodTab/wood_panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 126.0
grow_horizontal = 0
texture = ExtResource("2_08a8y")
expand_mode = 1

[node name="wood_button" type="Button" parent="WoodTab/wood_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -52.0
offset_right = 160.0
offset_bottom = -21.0
grow_vertical = 2
action_mode = 0
text = "Start Chopping"

[node name="wood_progress" type="ProgressBar" parent="WoodTab/wood_panel"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 17.0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 57.0
max_value = 5.0

[node name="wood_timer" type="Timer" parent="WoodTab/wood_panel"]
unique_name_in_owner = true

[node name="MineTab" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 192.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 641.0

[node name="TextureRect" type="TextureRect" parent="MineTab"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 576.0
texture = ExtResource("4_7yii4")
expand_mode = 1

[node name="StonePanel" type="Panel" parent="MineTab"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 352.0
offset_bottom = 272.0
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_jf511")

[node name="TempStoragePanel" type="Panel" parent="MineTab/StonePanel"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -85.0
offset_right = 150.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0wv8u")

[node name="LabelPanel" type="Panel" parent="MineTab/StonePanel/TempStoragePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -20.0
offset_right = -9.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="TempStoneStorageLabel" type="Label" parent="MineTab/StonePanel/TempStoragePanel/LabelPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoneCollectResourceButton" type="Button" parent="MineTab/StonePanel/TempStoragePanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 30)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -37.0
offset_right = 185.0
offset_bottom = -6.0
grow_vertical = 0
text = "Collect Resources "

[node name="Label2" type="Label" parent="MineTab/StonePanel/TempStoragePanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_left = -1.0
offset_right = 179.0
offset_bottom = 23.0
text = "Temp Storage"
horizontal_alignment = 1

[node name="Stoneimage" type="TextureRect" parent="MineTab/StonePanel"]
layout_mode = 0
offset_left = 160.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 129.0
texture = ExtResource("3_7yii4")
expand_mode = 1

[node name="Stone_button" type="Button" parent="MineTab/StonePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 85.0
offset_right = 144.0
offset_bottom = 116.0
action_mode = 0
text = "Start Mining"

[node name="Stone_progress" type="ProgressBar" parent="MineTab/StonePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 43.0
offset_right = 152.0
offset_bottom = 70.0
max_value = 5.0

[node name="Stone_timer" type="Timer" parent="MineTab/StonePanel"]
unique_name_in_owner = true

[node name="CraftingTab" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 192.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 642.0

[node name="GridContainer" type="GridContainer" parent="CraftingTab"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466667
anchor_top = 0.0836
anchor_right = 0.975
anchor_bottom = 0.859795
offset_top = 0.373596
offset_right = -6.10352e-05
offset_bottom = 3.80011
columns = 2
metadata/_edit_use_anchors_ = true

[node name="StickCraftButton" type="Button" parent="CraftingTab/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Wooden Sticks"

[node name="WoodenStickTimer" type="Timer" parent="CraftingTab/GridContainer/StickCraftButton"]
unique_name_in_owner = true

[node name="WoodenAxeCraftButton" type="Button" parent="CraftingTab/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Wooden Axe"

[node name="WoodenAxeCraftTimer" type="Timer" parent="CraftingTab/GridContainer/WoodenAxeCraftButton"]
unique_name_in_owner = true

[node name="WoodenPickCraftButton" type="Button" parent="CraftingTab/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Wooden Pickaxe"

[node name="WoodenPickCraftTimer" type="Timer" parent="CraftingTab/GridContainer/WoodenPickCraftButton"]
unique_name_in_owner = true

[node name="CraftPopUp" type="Panel" parent="CraftingTab"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 24.0
offset_right = 384.0
offset_bottom = 560.0

[node name="CraftPopNameLabel" type="Label" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 40.0
horizontal_alignment = 1

[node name="CraftPopItemImage" type="TextureRect" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 40.0
offset_right = 216.0
offset_bottom = 136.0
expand_mode = 1

[node name="CraftPopAmountNeedLabel" type="Label" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 152.0
offset_right = 160.0
offset_bottom = 320.0
text = "i"
horizontal_alignment = 1

[node name="CraftPopCurrentAmount" type="Label" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 160.0
offset_top = 152.0
offset_right = 320.0
offset_bottom = 320.0
text = "i"
horizontal_alignment = 1

[node name="CraftPopButton" type="Button" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 496.0
offset_right = 256.0
offset_bottom = 527.0
theme_override_colors/icon_normal_color = Color(0.414066, 0.414066, 0.414066, 1)
text = "Craft"

[node name="CraftPopProgressBar" type="ProgressBar" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 464.0
offset_right = 296.0
offset_bottom = 491.0

[node name="CurrentOwnedLabel" type="Label" parent="CraftingTab/CraftPopUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_top = 384.0
offset_right = 248.0
offset_bottom = 456.0
horizontal_alignment = 1

[node name="InventoryTab" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -260.0
offset_bottom = 379.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1, 0.913708)

[node name="InventoryWindow" parent="InventoryTab" instance=ExtResource("4_4yt8u")]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
offset_left = 48.0
offset_top = 61.2887
offset_right = -58.0
offset_bottom = -68.7113
scale = Vector2(1.00086, 1)
metadata/stonedata = ""

[node name="TopBar" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_67jta")

[node name="LevelProgressBar" type="ProgressBar" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 584.0
offset_top = 32.0
offset_right = 1014.0
offset_bottom = 59.0
max_value = 10.0

[node name="Label" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 1024.0
offset_top = 8.0
offset_right = 1072.0
offset_bottom = 31.0
text = "Level:"

[node name="level" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1024.0
offset_top = 32.0
offset_right = 1104.0
offset_bottom = 55.0
text = "0"

[node name="Label2" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 176.0
offset_right = 261.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 19
text = "Experience"

[node name="Button" type="Button" parent="TopBar"]
layout_mode = 0
offset_left = 376.0
offset_top = 8.0
offset_right = 520.0
offset_bottom = 56.0
text = "give exp"

[node name="MasteryTab" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="MasteryTab"]
layout_mode = 0
offset_left = 70.0
offset_top = 62.0
offset_right = 388.0
offset_bottom = 290.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p8208")

[node name="Label" type="Label" parent="MasteryTab/Panel"]
layout_mode = 0
offset_left = 42.0
offset_top = 11.0
offset_right = 269.0
offset_bottom = 34.0
text = "Chopping Mastery"
horizontal_alignment = 1

[node name="WoodMasteryProgressbar" type="ProgressBar" parent="MasteryTab/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -44.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArenaTab" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="BackyardPanel" type="Panel" parent="ArenaTab"]
layout_mode = 0
offset_left = 64.0
offset_top = 24.0
offset_right = 256.0
offset_bottom = 176.0
theme_override_styles/panel = SubResource("StyleBoxFlat_axmix")

[node name="Label" type="Label" parent="ArenaTab/BackyardPanel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 23.0
text = "Backyard"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ArenaTab/BackyardPanel"]
layout_mode = 0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 55.0
text = "Recommanded Level:"

[node name="Label3" type="Label" parent="ArenaTab/BackyardPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 56.0
offset_right = 56.0
offset_bottom = 79.0
text = "0-10"

[node name="Button" type="Button" parent="ArenaTab/BackyardPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 64.0
offset_bottom = 135.0
text = "Travel"

[node name="TextureRect" type="TextureRect" parent="ArenaTab/BackyardPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 184.0
offset_bottom = 144.0
texture = ExtResource("5_p54wi")
expand_mode = 1

[node name="BackyardTab" type="Panel" parent="ArenaTab"]
visible = false
layout_mode = 0
offset_right = 960.0
offset_bottom = 608.0

[node name="SaveandQuit" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(650, 200)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.346
anchor_right = 0.76
anchor_bottom = 0.654
offset_left = 279.52
offset_top = 79.792
offset_right = -279.52
offset_bottom = -79.792
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jqlde")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="SaveandQuit"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_top = 30.0
offset_right = 253.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 23
text = "Are you sure you would like to Save and Quit?"

[node name="HBoxContainer" type="HBoxContainer" parent="SaveandQuit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 20.0
offset_right = 35.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SaveandQuit/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 30

[node name="YesButton" type="Button" parent="SaveandQuit/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
text = "Yes
(Save and Quit)"

[node name="MarginContainer2" type="MarginContainer" parent="SaveandQuit/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="NoButton" type="Button" parent="SaveandQuit/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
text = "No"

[connection signal="pressed" from="tabs/Woodtab" to="." method="_on_woodtab_pressed"]
[connection signal="pressed" from="tabs/Minetab" to="." method="_on_minetab_pressed"]
[connection signal="pressed" from="tabs/Craftingtab" to="." method="_on_craftingtab_pressed"]
[connection signal="pressed" from="tabs/InventoryTab" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="tabs/MasteryTab" to="." method="_on_MasteryTab_pressed"]
[connection signal="pressed" from="tabs/ArenaTab" to="." method="_on_arena_pressed"]
[connection signal="pressed" from="tabs/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="WoodTab/wood_panel/Panel/WoodCollectResourceButton" to="." method="_on_wood_collect_resource_button_pressed"]
[connection signal="pressed" from="WoodTab/wood_panel/wood_button" to="." method="_on_wood_button_pressed"]
[connection signal="timeout" from="WoodTab/wood_panel/wood_timer" to="." method="_on_wood_timer_timeout"]
[connection signal="pressed" from="MineTab/StonePanel/TempStoragePanel/StoneCollectResourceButton" to="." method="_on_stone_collect_resource_button_pressed"]
[connection signal="pressed" from="MineTab/StonePanel/Stone_button" to="." method="_on_stone_button_pressed"]
[connection signal="pressed" from="CraftingTab/GridContainer/StickCraftButton" to="." method="_on_stick_craft_button_pressed"]
[connection signal="timeout" from="CraftingTab/GridContainer/StickCraftButton/WoodenStickTimer" to="." method="_on_wooden_stick_timer_timeout"]
[connection signal="pressed" from="CraftingTab/GridContainer/WoodenAxeCraftButton" to="." method="_on_wooden_axe_craft_button_pressed"]
[connection signal="timeout" from="CraftingTab/GridContainer/WoodenAxeCraftButton/WoodenAxeCraftTimer" to="." method="_on_wooden_axe_craft_timer_timeout"]
[connection signal="pressed" from="CraftingTab/GridContainer/WoodenPickCraftButton" to="." method="_on_wooden_pick_craft_button_pressed"]
[connection signal="timeout" from="CraftingTab/GridContainer/WoodenPickCraftButton/WoodenPickCraftTimer" to="." method="_on_wooden_pick_craft_timer_timeout"]
[connection signal="pressed" from="CraftingTab/CraftPopUp/CraftPopButton" to="." method="_craft_pop_button_pressed"]
[connection signal="pressed" from="TopBar/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SaveandQuit/HBoxContainer/MarginContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="SaveandQuit/HBoxContainer/MarginContainer2/NoButton" to="." method="_on_no_button_pressed"]
